src/test/deca/context/invalid/provided/returntype_incompatible.deca
class A {
  float x;
  int getX() {return this.x;}
}
